card animation added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>  
 
     <!-- Header Section Starts -->
-    <header>           
+    <header>    
         <!-- Navigation Menu Starts -->
         <nav class="navbar">    
             <h3 class="brand">Influencer Products</h3>
@@ -36,12 +36,12 @@
                 <br> consectetur libero illum error saepe quo rem iure quos, sit suscipit corporis vitae laborum,   
                 <br> nam, earum nesciunt neque voluptatem?
             </p>    
-            <button class="btn-primary"> Pre-book now </button> 
+            <button class="btn-primary magic"> Pre-book now </button> 
             
           </div>    
           <div class="image-container"> 
               
-            <img class="main-camera" src="images/main-camera.png" alt="">
+            <img class="main-camera" src="images/undraw_camera_re_cnp4.svg" alt="">
         </div>
         </div>  
 
@@ -247,4 +247,5 @@
         </div>
     </footer>
 </body>
-</html>
+</html> 
+ 
