button action added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav class="navbar">    
             <h3 class="brand">Influencer Products</h3>
             <ul class="nav-links">
-             <li class="nav-item"><a href="" class="nav-link">Home</a></li>
-             <li class="nav-item"><a href="" class="nav-link">Products</a></li>
+             <li class="nav-item"><a href="#banner" class="nav-link">Home</a></li>
+             <li class="nav-item"><a href="#section" class="nav-link">Products</a></li>
              <li class="nav-item"><a href="" class="nav-link">Sign up</a></li>
              <li class="nav-item"><a href=""    
              class="nav-link">Log in</a></li>
@@ -25,7 +25,7 @@
         </nav>
         <!-- Navigation Menu Ends -->   
 
-        <div class="banner">  
+        <div id="banner" class="banner">  
           <div class="banner-contant">  
             <h3 class="banner-title">   
                 Start your Journey as <br> 
@@ -69,7 +69,7 @@
         
     <main>  
 
-        <section class="populer-collection">    
+        <section id="section" class="populer-collection">    
             
             <h3 class="products-title"> 
                 Popular Collection
