--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>  
 
         <div class="future">    
-            <img class="future-image" src="images/gear.png" alt="">   
+            <img class="future-image" src="Business Discussion.png" alt="">   
             <div class="future-contant">    
                 <h3 class="future-title">   
                     Featured products at one place
